Bug 1797947 - Make devtools generated fetch requests excluded from resource timing r=jdescottes,valentin,necko-reviewers

Devtools can generate fetch request on behalf of the content document,
reporting these requests in PerformanceObserver would cause confusion,
so we should ignore them.

Differential Revision: https://phabricator.services.mozilla.com/D162582